--- a/config/.env_template
+++ b/config/.env_template
@@ -1,1 +1,8 @@
 SECRET_KEY = 'django-insecure-AA-AAAAAAAA=AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
+DOMAIN_NAME = 'DOMAIN_NAME'
+DEBUG = False
+EMAIL_HOST = 'EMAIL_HOST'
+EMAIL_HOST_USER = 'EMAIL_HOST_USER'
+EMAIL_HOST_PASSWORD = 'EMAIL_HOST_PASSWORD'
+EMAIL_SENDER = 'EMAIL_SENDER'
+EMAIL_RECIPIEN = 'EMAIL_RECIPIEN'
