--- a/config/.env_template
+++ b/config/.env_template
@@ -6,3 +6,7 @@ EMAIL_HOST_USER = 'EMAIL_HOST_USER'
 EMAIL_HOST_PASSWORD = 'EMAIL_HOST_PASSWORD'
 EMAIL_SENDER = 'EMAIL_SENDER'
 EMAIL_RECIPIEN = 'EMAIL_RECIPIEN'
+TYPE_DATABASES = 'postgresql'
+DATABASES_NAME = 'mydatabase'
+DATABASES_USER = 'mydatabaseuser'
+DATABASES_PASSWORD = 'mypassword'
