--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ python:
   - "3.9"
 env:
   - TYPE_DATABASES=sqlite3
-install:
+before_script:
   - pip install -r requirements.txt
+  - cd ./config/
 script:
-  - python ./config/manage.py test
+  - python manage.py test --keepdb
