--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ before_script:
   - pip install -r requirements.txt
   - cd ./config/
 script:
-  - python manage.py test --keepdb
+  - python manage.py test
