--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ before_script:
   - pip install -r requirements.txt
   - cd ./config/
   - python manage.py makemigrations
-  - python manage.py migrate --run-syncdb
+  - python manage.py migrate
 script:
   - python manage.py test --keepdb
