--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_script:
   - python manage.py makemigrations
   - python manage.py migrate
 script:
-  - python manage.py test --keepdb
+  - python manage.py test
