--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,7 @@
 language: python
 python:
   - "3.9"
-before_script:
+install:
   - pip install -r requirements.txt
-  - cd ./config/
 script:
-  - python manage.py test
+  - python ./config/manage.py test
