--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,7 @@ python:
   - "3.9"
 install:
   - pip install -r requirements.txt
+before_script:
+  - rm db.sqlite3
 script:
   - python ./config/manage.py test blog
