--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
 install:
   - pip install -r requirements.txt
 before_script:
+  - python ./config/manage.py makemigrations
   - python ./config/manage.py migrate --run-syncdb
 script:
   - python ./config/manage.py test blog
