--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ install:
   - pip install -r requirements.txt
 before_script:
   - python ./config/manage.py makemigrations
+  - python ./config/manage.py migrate
   - python ./config/manage.py migrate --run-syncdb
 script:
   - python ./config/manage.py test blog
