--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,85 @@ services:
   traefik:
     image: traefik:v2.5
     container_name: traefik
+    restart: always
+    command:
+      - --global.checkNewVersion=true
+      - --global.sendAnonymousUsage=true
+      - --entryPoints.http.address=:80
+      - --entryPoints.https.address=:443
+      # Allow these IPs to set the X-Forwarded-* headers - Cloudflare IPs: https://www.cloudflare.com/ips/
+      - --entrypoints.https.forwardedHeaders.trustedIPs=173.245.48.0/20,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,141.101.64.0/18,108.162.192.0/18,190.93.240.0/20,188.114.96.0/20,197.234.240.0/22,198.41.128.0/17,162.158.0.0/15,104.16.0.0/12,172.64.0.0/13,131.0.72.0/22
+      - --entryPoints.traefik.address=:8080
+      - --api=true
+      #- --api.insecure=true # если нужен доступ из локали по 8080 порту к дашборду
+      - --api.dashboard=true
+      #- --serversTransport.insecureSkipVerify=true
+      - --log=true
+      - --log.level=ERROR # (Default: error) DEBUG, INFO, WARN, ERROR, FATAL, PANIC
+      - --accessLog=true
+      - --accessLog.filePath=/traefik.log
+      - --accessLog.bufferingSize=100 # Configuring a buffer of 100 lines
+      - --accessLog.filters.statusCodes=400-499
+      - --providers.docker=true
+      - --providers.docker.endpoint=unix:///var/run/docker.sock
+      - --providers.docker.defaultrule=Host(`{{ index .Labels "com.docker.compose.service" }}.$DOMAINNAME`)
+      - --providers.docker.exposedByDefault=false
+      # - --entrypoints.https.http.middlewares=chain-oauth@file
+      - --entrypoints.https.http.tls.options=tls-opts@file
+      # Add dns-cloudflare as default certresolver for all services. Also enables TLS and no need to specify on individual services
+      - --entrypoints.https.http.tls.certresolver=dns-cloudflare
+      - --entrypoints.https.http.tls.domains[0].main=$DOMAINNAME
+      - --entrypoints.https.http.tls.domains[0].sans=*.$DOMAINNAME    
+      - --providers.docker.network=web
+      - --providers.docker.swarmMode=false
+      - --providers.file.directory=/rules # Load dynamic configuration from one or more .toml or .yml files in a directory.
+      - --providers.file.watch=true # Only works on top level files in the rules folder
+      #- --certificatesResolvers.dns-cloudflare.acme.caServer=https://acme-staging-v02.api.letsencrypt.org/directory # LetsEncrypt Staging Server - раскоменть, когда будешь тестить. Чтобы тебя сервер выдачи сертов не забанил
+      - --certificatesResolvers.dns-cloudflare.acme.email=$CLOUDFLARE_EMAIL # задашь в .env файле
+      - --certificatesResolvers.dns-cloudflare.acme.storage=/acme.json
+      - --certificatesResolvers.dns-cloudflare.acme.dnsChallenge.provider=cloudflare
+      - --certificatesResolvers.dns-cloudflare.acme.dnsChallenge.resolvers=1.1.1.1:53,1.0.0.1:53
+      - --certificatesResolvers.dns-cloudflare.acme.dnsChallenge.delayBeforeCheck=90 # To delay DNS check and reduce LE hitrate    
+    networks:
+      - web
+    depends_on:
+      - oauth # закрываем доступ в веб морду, атворизация через oauth. Авторизация через HTTP не безопасна
+    security_opt:
+      - no-new-privileges:true    
     ports:
-      - 80:80
-      - 443:443
-    volumes:
-      - "$PWD/traefik.toml:/traefik.toml"
-      - "$PWD/traefik_dynamic.toml:/traefik_dynamic.toml"
-      - "$PWD/acme.json:/acme.json"
-      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "80:80"
+      - "443:443"
+      #- "8080:8080" # если включишь доступ 
+    volumes: # храни лучше каждый образ в своей папке
+      - $PWD/traefik2/rules:/rules # папка для правил
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+      - $PWD/traefik2/acme/acme.json:/acme.json 
+      - $PWD/traefik2/traefik.log:/traefik.log 
+      - $PWD/traefik2/shared:/shared # хранишь в этой папке файл .htpasswd
     networks:
       - web
       - internal
+    environment:
+      - CF_API_EMAIL=$CLOUDFLARE_EMAIL
+      #- CF_API_KEY=$CLOUDFLARE_API_KEY # 
+      - CF_API_KEY_FILE=/run/secrets/cloudflare_api_key
+    secrets:
+      - cloudflare_api_key
+    labels:
+      - "traefik.enable=true"
+      ## HTTP-to-HTTPS Redirect
+      - "traefik.http.routers.http-catchall.entrypoints=http" 
+      - "traefik.http.routers.http-catchall.rule=HostRegexp(`{host:.+}`)"
+      - "traefik.http.routers.http-catchall.middlewares=redirect-to-https"
+      - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
+      ## HTTP Routers
+      - "traefik.http.routers.traefik-rtr.entrypoints=https"
+      - "traefik.http.routers.traefik-rtr.rule=Host(`traefik.$DOMAINNAME`)"
+      ## Services - API
+      - "traefik.http.routers.traefik-rtr.service=api@internal"
+      ## Middlewares
+      - "traefik.http.routers.traefik-rtr.middlewares=basic-auth@file"      
+      
   web:
     build: .
     container_name: web
