--- a/.env_template
+++ b/.env_template
@@ -1,6 +1,8 @@
 SECRET_KEY = 'django-insecure-AA-AAAAAAAA=AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
 DOMAIN_NAME = 'DOMAIN_NAME'
 DEBUG = False
+DJANGO_LOG_LEVEL = 'ERROR'
+DJANGO_LOG_FILE = '/path/to/django/debug.log'
 EMAIL_HOST = 'EMAIL_HOST'
 EMAIL_HOST_USER = 'EMAIL_HOST_USER'
 EMAIL_HOST_PASSWORD = 'EMAIL_HOST_PASSWORD'
@@ -13,3 +15,5 @@ DATABASES_PASSWORD = 'mypassword'
 DATABASES_HOST = '127.0.0.1'
 DATABASES_PORT = '5432'
 ALLOWED_HOSTS = '127.0.0.1'
+RECAPTCHA_PUBLIC_KEY = 'RECAPTCHA_PUBLIC_KEY'
+RECAPTCHA_PRIVATE_KEY = 'RECAPTCHA_PRIVATE_KEY'
