--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     container_name: web
     env_file:
       - .env
-    command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; gunicorn --bind 0.0.0.0:8000 config.wsgi'
+    command: bash -c 'while !</dev/tcp/postgres/5432; do sleep 1; done; gunicorn --bind 0.0.0.0:8000 config.wsgi'
     volumes:
       - .:/home/app/web
     restart: always
@@ -35,7 +35,7 @@ services:
     expose:
       - 8010
     depends_on:
-      - db
+      - postgres
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.django.rule=Host(`${DOMAIN_NAME}`)"
@@ -44,13 +44,13 @@ services:
     networks:
       - web
       - internal
-  db:
-    image: postgres:13-alpine
-    container_name: db
+  postgres:
+    image: postgres:13
+    container_name: postgres
     env_file:
       - .env
     volumes:
-      - ./data/db:/var/lib/postgresql/data
+      - /storage/docker/volumes/postgres/data/db:/var/lib/postgresql/data
     restart: always
     ports:
       - "5432:5432"
@@ -62,7 +62,7 @@ services:
       - "POSTGRES_PASSWORD=${DATABASES_PASSWORD}"
     networks:
       - internal
-
+      - web
   nginx:
     image: nginx:1.15-alpine
     container_name: nginx
