--- a/.env_template
+++ b/.env_template
@@ -17,3 +17,5 @@ DATABASES_PORT = '5432'
 ALLOWED_HOSTS = '127.0.0.1'
 RECAPTCHA_PUBLIC_KEY = 'RECAPTCHA_PUBLIC_KEY'
 RECAPTCHA_PRIVATE_KEY = 'RECAPTCHA_PRIVATE_KEY'
+CLOUDFLARE_EMAIL= 'CLOUDFLARE_EMAIL'
+CLOUDFLARE_API_KEY= 'CLOUDFLARE_API_KEY'
