--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,10 @@ networks:
 
 services:
   traefik:
-    image: traefik:v2.5
     container_name: traefik
+    image: traefik:v2.5
     restart: always
-    command:
+    command: # CLI arguments
       - --global.checkNewVersion=true
       - --global.sendAnonymousUsage=true
       - --entryPoints.http.address=:80
@@ -20,71 +20,64 @@ services:
       - --entrypoints.https.forwardedHeaders.trustedIPs=173.245.48.0/20,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,141.101.64.0/18,108.162.192.0/18,190.93.240.0/20,188.114.96.0/20,197.234.240.0/22,198.41.128.0/17,162.158.0.0/15,104.16.0.0/12,172.64.0.0/13,131.0.72.0/22
       - --entryPoints.traefik.address=:8080
       - --api=true
-      #- --api.insecure=true # если нужен доступ из локали по 8080 порту к дашборду
+      #- --api.insecure=true
       - --api.dashboard=true
       #- --serversTransport.insecureSkipVerify=true
       - --log=true
-      - --log.level=ERROR # (Default: error) DEBUG, INFO, WARN, ERROR, FATAL, PANIC
+      - --log.level=WARN # (Default: error) DEBUG, INFO, WARN, ERROR, FATAL, PANIC
       - --accessLog=true
       - --accessLog.filePath=/traefik.log
       - --accessLog.bufferingSize=100 # Configuring a buffer of 100 lines
       - --accessLog.filters.statusCodes=400-499
       - --providers.docker=true
       - --providers.docker.endpoint=unix:///var/run/docker.sock
-      - --providers.docker.defaultrule=Host(`{{ index .Labels "com.docker.compose.service" }}.$DOMAINNAME`)
+      - --providers.docker.defaultrule=Host({{ index .Labels "com.docker.compose.service" }}.$DOMAIN_NAME)
       - --providers.docker.exposedByDefault=false
       # - --entrypoints.https.http.middlewares=chain-oauth@file
       - --entrypoints.https.http.tls.options=tls-opts@file
       # Add dns-cloudflare as default certresolver for all services. Also enables TLS and no need to specify on individual services
       - --entrypoints.https.http.tls.certresolver=dns-cloudflare
-      - --entrypoints.https.http.tls.domains[0].main=$DOMAINNAME
-      - --entrypoints.https.http.tls.domains[0].sans=*.$DOMAINNAME    
+      - --entrypoints.https.http.tls.domains[0].main=$DOMAIN_NAME
+      - --entrypoints.https.http.tls.domains[0].sans=*.$DOMAIN_NAME
       - --providers.docker.network=web
       - --providers.docker.swarmMode=false
       - --providers.file.directory=/rules # Load dynamic configuration from one or more .toml or .yml files in a directory.
       - --providers.file.watch=true # Only works on top level files in the rules folder
-      #- --certificatesResolvers.dns-cloudflare.acme.caServer=https://acme-staging-v02.api.letsencrypt.org/directory # LetsEncrypt Staging Server - раскоменть, когда будешь тестить. Чтобы тебя сервер выдачи сертов не забанил
-      - --certificatesResolvers.dns-cloudflare.acme.email=$CLOUDFLARE_EMAIL # задашь в .env файле
+      #- --certificatesResolvers.dns-cloudflare.acme.caServer=https://acme-staging-v02.api.letsencrypt.org/directory # LetsEncrypt Staging Server - uncomment when testing
+      - --certificatesResolvers.dns-cloudflare.acme.email=$CLOUDFLARE_EMAIL
       - --certificatesResolvers.dns-cloudflare.acme.storage=/acme.json
       - --certificatesResolvers.dns-cloudflare.acme.dnsChallenge.provider=cloudflare
       - --certificatesResolvers.dns-cloudflare.acme.dnsChallenge.resolvers=1.1.1.1:53,1.0.0.1:53
-      - --certificatesResolvers.dns-cloudflare.acme.dnsChallenge.delayBeforeCheck=90 # To delay DNS check and reduce LE hitrate    
-    networks:
-      - web
-    depends_on:
-      - oauth # закрываем доступ в веб морду, атворизация через oauth. Авторизация через HTTP не безопасна
-    security_opt:
-      - no-new-privileges:true    
+      - --certificatesResolvers.dns-cloudflare.acme.dnsChallenge.delayBeforeCheck=90 # To delay DNS check and reduce LE hitrate
     ports:
-      - "80:80"
-      - "443:443"
-      #- "8080:8080" # если включишь доступ 
-    volumes: # храни лучше каждый образ в своей папке
-      - $PWD/traefik2/rules:/rules # папка для правил
-      - /var/run/docker.sock:/var/run/docker.sock:ro
-      - $PWD/traefik2/acme/acme.json:/acme.json 
-      - $PWD/traefik2/traefik.log:/traefik.log 
-      - $PWD/traefik2/shared:/shared # хранишь в этой папке файл .htpasswd
+      - 80:80
+      - 443:443
+      #- 8081:8080
+    volumes:
+      - "$PWD/traefik2/rules:/rules"
+      - "$PWD/acme.json:/acme.json"
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - $PWD/traefik2/traefik.log:/traefik.log
+      - $PWD/shared:/shared
     networks:
       - web
       - internal
-    secrets:
-      - cloudflare_api_key
+    environment:
+      - CF_API_EMAIL=$CLOUDFLARE_EMAIL
+      - CF_API_KEY=$CLOUDFLARE_API_KEY
     labels:
       - "traefik.enable=true"
       ## HTTP-to-HTTPS Redirect
-      - "traefik.http.routers.http-catchall.entrypoints=http" 
+      - "traefik.http.routers.http-catchall.entrypoints=http"
       - "traefik.http.routers.http-catchall.rule=HostRegexp(`{host:.+}`)"
       - "traefik.http.routers.http-catchall.middlewares=redirect-to-https"
       - "traefik.http.middlewares.redirect-to-https.redirectscheme.scheme=https"
       ## HTTP Routers
       - "traefik.http.routers.traefik-rtr.entrypoints=https"
       - "traefik.http.routers.traefik-rtr.rule=Host(`traefik.$DOMAIN_NAME`)"
-      ## Services - API
       - "traefik.http.routers.traefik-rtr.service=api@internal"
-      ## Middlewares
-      - "traefik.http.routers.traefik-rtr.middlewares=basic-auth@file"      
-      
+      - "traefik.http.routers.traefik-rtr.middlewares=chain-basic-auth@file"     
+
   web:
     build: .
     container_name: web
@@ -102,18 +95,22 @@ services:
       - postgres
     labels:
       - "traefik.enable=true"
+      #- "traefik.http.routers.django.rule=Host(`$DOMAIN_NAME`)"
+      #- "traefik.http.routers.django.tls=true"
       ## HTTP Routers
       - "traefik.http.routers.django-rtr.entrypoints=https"
       - "traefik.http.routers.django-rtr.rule=Host(`$DOMAIN_NAME`)"
-      - "traefik.http.routers.django-rtr.tls=true"
       ## Middlewares
-      - "traefik.http.routers.django-rtr.middlewares=no-auth@file"
+      - "traefik.http.routers.django-rtr.middlewares=chain-no-auth@file"
       ## HTTP Services
       - "traefik.http.routers.django-rtr.service=django-svc"
-      - "traefik.http.services.django-svc.loadbalancer.server.port=8010"
+      - "traefik.http.services.django-svc.loadbalancer.server.port=8000"
+      ## Disable from watchtower
+      - "com.centurylinklabs.watchtower.enable=`false`"
     networks:
       - web
       - internal
+
   postgres:
     image: postgres:13
     container_name: postgres
@@ -133,6 +130,7 @@ services:
     networks:
       - internal
       - web
+
   nginx:
     image: nginx:1.15-alpine
     container_name: nginx
@@ -145,9 +143,8 @@ services:
       - ./config/media:/media
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.static-http.entrypoints=websecure"
-      - "traefik.http.routers.static-http.rule=Host(`${DOMAIN_NAME}`) && PathPrefix(`/static`,`/media`)" 
-      - "traefik.http.routers.static-http.tls.certresolver=lets-encrypt"
+      - "traefik.http.routers.static-http.entrypoints=https"      
+      - "traefik.http.routers.static-http.rule=Host(`${DOMAIN_NAME}`) && PathPrefix(`/static`,`/media`)"
     networks:
       - web
       - internal
