--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -14,7 +14,7 @@ services:
       - .env
     command: bash -c 'while !</dev/tcp/postgres/5432; do sleep 1; done; gunicorn --bind 0.0.0.0:8000 config.wsgi'
     volumes:
-      - .:/home/app/web
+      - .:/home/user/web
     restart: always
     ports:
       - '8010:8000'
@@ -34,11 +34,12 @@ services:
       ## HTTP Services
       - "traefik.http.routers.django-rtr.service=django-svc"
       - "traefik.http.services.django-svc.loadbalancer.server.port=8000"
-      
+      ## Disable from watchtower
+      - "com.centurylinklabs.watchtower.enable=false"
     networks:
       - web
       - internal
-      
+
   postgres:
     image: postgres:13
     container_name: postgres
@@ -58,6 +59,7 @@ services:
     networks:
       - internal
       - web
+
   nginx:
     image: nginx:1.15-alpine
     container_name: nginx
