--- a/.env_template
+++ b/.env_template
@@ -8,7 +8,7 @@ EMAIL_HOST_USER=EMAIL_HOST_USER
 EMAIL_HOST_PASSWORD=EMAIL_HOST_PASSWORD
 EMAIL_SENDER=EMAIL_SENDER
 EMAIL_RECIPIEN=EMAIL_RECIPIEN
-TYPE_DATABASES=postgresql
+TYPE_DATABASES=sqlite3
 DATABASES_NAME=mydatabase
 DATABASES_USER=mydatabaseuser
 DATABASES_PASSWORD=mypassword
