--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
 version: '3'
 
 networks:
-  web:
+  direct_net:
     external: true
-  internal:
-    external: false
 
 services:
   traefik:
@@ -20,7 +18,7 @@ services:
       - --entrypoints.https.forwardedHeaders.trustedIPs=173.245.48.0/20,103.21.244.0/22,103.22.200.0/22,103.31.4.0/22,141.101.64.0/18,108.162.192.0/18,190.93.240.0/20,188.114.96.0/20,197.234.240.0/22,198.41.128.0/17,162.158.0.0/15,104.16.0.0/12,172.64.0.0/13,131.0.72.0/22
       - --entryPoints.traefik.address=:8080
       - --api=true
-      #- --api.insecure=true
+      - --api.insecure=true
       - --api.dashboard=true
       #- --serversTransport.insecureSkipVerify=true
       - --log=true
@@ -60,8 +58,7 @@ services:
       - $PWD/traefik2/traefik.log:/traefik.log
       - $PWD/shared:/shared
     networks:
-      - web
-      - internal
+      - direct_net
     environment:
       - CF_API_EMAIL=$CLOUDFLARE_EMAIL
       - CF_API_KEY=$CLOUDFLARE_API_KEY
@@ -106,8 +103,7 @@ services:
       ## Disable from watchtower
       - "com.centurylinklabs.watchtower.enable=false"
     networks:
-      - web
-      - internal
+      - direct_net
 
   tests:
     build: .
@@ -119,8 +115,7 @@ services:
       - .:/home/user/web
     restart: always
     networks:
-      - web
-      - internal
+      - direct_net
 
   postgres:
     image: postgres:13
@@ -128,7 +123,7 @@ services:
     env_file:
       - .env
     volumes:
-      - /storage/docker/volumes/postgres/data/db:/var/lib/postgresql/data
+      - ../postgres/db:/var/lib/postgresql/data
     restart: always
     ports:
       - "5432:5432"
@@ -139,8 +134,7 @@ services:
       - "POSTGRES_USER=${DATABASES_USER}"
       - "POSTGRES_PASSWORD=${DATABASES_PASSWORD}"
     networks:
-      - internal
-      - web
+      - direct_net
 
   nginx:
     image: nginx:1.15-alpine
@@ -148,6 +142,8 @@ services:
     env_file:
       - .env
     restart: always
+    ports:
+      - 80:80
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./config/static:/static
@@ -157,7 +153,6 @@ services:
       - "traefik.http.routers.static-http.entrypoints=https"      
       - "traefik.http.routers.static-http.rule=Host(`${DOMAIN_NAME}`) && PathPrefix(`/static`,`/media`)"
     networks:
-      - web
-      - internal
+      - direct_net
     depends_on:
       - web
