--- a/nginx.conf
+++ b/nginx.conf
@@ -19,6 +19,10 @@ server {
        alias /media;
    }
 
+   location / {
+       proxy_pass http://192.168.1.30:8010;
+   }
+
    access_log                  /var/log/nginx/access.log;
    error_log                   /var/log/nginx/error.log;
 }
