--- a/nginx.conf
+++ b/nginx.conf
@@ -4,8 +4,6 @@ server {
    client_max_body_size        200M;
    set                         $cache_uri $request_uri;
 
-   location                    = /favicon.ico { log_not_found off; access_log off; }
-   location                    = /robots.txt  { log_not_found off; access_log off; }
    ignore_invalid_headers      on;
    add_header                  Access-Control-Allow_Origin *;
 
@@ -17,6 +15,10 @@ server {
    location /media {
        autoindex on;
        alias /media;
+   }
+
+   location / {
+       proxy_pass http://192.168.1.30:8010;
    }
 
    access_log                  /var/log/nginx/access.log;
