--- a/config/pyproject.toml
+++ b/config/pyproject.toml
@@ -16,6 +16,7 @@ Pillow = "8.3.2"
 psycopg2-binary = "2.9.1"
 python-dotenv = "0.19.0"
 pytils = "0.4.1"
+sentry-sdk = "0.10.2"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = "3.2.2"
