changed permissions by users, added flake8 and updated Django

--- a/.env_template
+++ b/.env_template
@@ -1,3 +1,5 @@
+SERVER_ROLE=production  # develop, staging, production
+LOGGING_ON=True
 SECRET_KEY=django-insecure-AA-AAAAAAAA=AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 DOMAIN_NAME=DOMAIN_NAME
 DEBUG=False
