--- a/config/pyproject.toml
+++ b/config/pyproject.toml
@@ -1,25 +1,27 @@
 [tool.poetry]
 name = "blog"
-version = "0.1.0"
+version = "0.2.0"
 description = "blog on Django"
 authors = ["Alfir Tyakin <alfir7777@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "3.9.13"
-Django = "3.2.11"
-django-ckeditor = "6.1.0"
-django-recaptcha = "2.0.6"
+Django = "4.2.7"
+django-ckeditor = "6.7.0"
+django-recaptcha = "3.0.0"
 django-smtp-ssl = "1.0"
-djangorestframework = "3.12.4"
-gunicorn = "20.1.0"
-Pillow = "8.3.2"
-psycopg2-binary = "2.9.1"
-python-dotenv = "0.19.0"
+djangorestframework = "3.14.0"
+gunicorn = "21.2.0"
+Pillow = "10.1.0"
+psycopg2-binary = "2.9.9"
+python-dotenv = "1.0.0"
 pytils = "0.4.1"
 sentry-sdk = "0.10.2"
 
-[tool.poetry.dev-dependencies]
-django-debug-toolbar = "3.2.2"
+[tool.poetry.group.dev.dependencies]
+flake8 = "6.1.0"
+flake8-import-order = "0.18.2"
+django-debug-toolbar = "4.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
