Change permissions by users, add flake8 and update Django (#8)
* changed permissions by users, added flake8 and updated Django

* update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,11 @@
 /venv/
 /config/static/
 /data/db/
+/config/media/
+__pycache__
 *.log
 .env
 db.sqlite3
-/config/media/
 acme.json
 .htpasswd
+.DS_Store
