--- a/.env_template
+++ b/.env_template
@@ -2,6 +2,8 @@ SERVER_ROLE=production  # develop, staging, production
 LOGGING_ON=True
 SECRET_KEY=django-insecure-AA-AAAAAAAA=AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 DOMAIN_NAME=DOMAIN_NAME
+DOCKERDIR_APP=DOCKERDIR_APP
+DOCKERDIR_DB=DOCKERDIR_DB
 DEBUG=False
 DJANGO_LOG_LEVEL=ERROR
 DJANGO_LOG_FILE=/path/to/django/debug.log
@@ -21,3 +23,4 @@ RECAPTCHA_PUBLIC_KEY=RECAPTCHA_PUBLIC_KEY
 RECAPTCHA_PRIVATE_KEY=RECAPTCHA_PRIVATE_KEY
 CLOUDFLARE_EMAIL=CLOUDFLARE_EMAIL
 CLOUDFLARE_API_KEY=CLOUDFLARE_API_KEY
+SENTRY_SDK_DSN=SENTRY_SDK_DSN
