--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -11,8 +11,6 @@ services:
     env_file:
       - .env
     command: bash -c 'while !</dev/tcp/postgres/5432; do sleep 1; done; gunicorn --bind 0.0.0.0:8000 config.wsgi'
-    volumes:
-      - .:/home/user/web
     restart: always
     ports:
       - '8010:8000'
@@ -35,25 +33,13 @@ services:
     networks:
       - direct_net
 
-  tests:
-    build: .
-    container_name: tests
-    env_file:
-      - .env
-    command: bash -c 'python3 manage.py test'
-    volumes:
-      - .:/home/user/web
-    restart: always
-    networks:
-      - direct_net
-
   postgres:
     image: postgres:13
     container_name: postgres
     env_file:
       - .env
     volumes:
-      - ../postgres/db:/var/lib/postgresql/data
+      - ${DOCKERDIR_DB}:/var/lib/postgresql/data
     restart: always
     ports:
       - "5432:5432"
@@ -75,9 +61,9 @@ services:
     ports:
       - 80:80
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./config/static:/static
-      - ./config/media:/media
+      - ${DOCKERDIR_APP}/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ${DOCKERDIR_APP}/config/static:/static
+      - ${DOCKERDIR_APP}/config/media:/media
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.static-http.entrypoints=https"      
