fixed: Google Search Console - Page indexing is prohibited by the noindex tag

--- a/traefik2/rules/middlewares-chains.yml
+++ b/traefik2/rules/middlewares-chains.yml
@@ -12,3 +12,9 @@ http:
           - middlewares-rate-limit
           - middlewares-secure-headers
           - middlewares-basic-auth
+
+    chain-web-no-auth:
+      chain:
+        middlewares:
+          - middlewares-rate-limit
+          - middlewares-secure-headers-web
